# cnxd

./: README.md  build.gradle  deps.sh  gradle.properties
.github/workflows/: debug.yml  release-clone-versioning.yml  release-clone.yml  release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  README.md
app/src/main/java/src/comitton/activity/: CropImageActivity.java  ExpandActivity.java  FileSelectActivity.java  ImageActivity.java  TextActivity.java
app/src/main/java/src/comitton/common/: DEF.java  FileAccess.java  MODULE.java
app/src/main/java/src/comitton/config/: SetCommonActivity.java  SetImageActivity.java
app/src/main/java/src/comitton/data/: FileData.java
app/src/main/java/src/comitton/dialog/: DownloadDialog.java  ImageConfigDialog.java  Information.java  RemoveDialog.java
app/src/main/java/src/comitton/filelist/: FileSelectList.java
app/src/main/java/src/comitton/stream/: FileThumbnailLoader.java  ImageManager.java
app/src/main/java/src/comitton/view/image/: MyImageView.java
app/src/main/java/src/comitton/view/list/: FileListArea.java
app/src/main/jni/: CMakeLists.txt  libjpeg-turbo.cmake  libpng.cmake  libwebp.cmake  patch-unrar.sh  unrar.cmake
app/src/main/jni/comitton/: Image.h  ImageJPEG.cpp  ImagePDF.cpp  ImagePNG.cpp  ImageWebP.cpp  PdfFlate.cpp  PdfPredict.cpp  callImage.cpp
app/src/main/jni/libjpeg-turbo/: CMakeLists.txt
app/src/main/jni/libpng/: CMakeLists.txt
app/src/main/jni/libwebp/: CMakeLists.txt
app/src/main/jni/unrar/: CMakeLists.txt
app/src/main/res/layout/: recordlist.xml  serverview.xml
app/src/main/res/layout-land/: recordlist.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/xml/: common.xml  image.xml
app/src/main/res/xml-ja/: image.xml
